--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "node-typescript-boilerplate",
-  "version": "0.0.0",
-  "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
+  "name": "@symfoni/walletconnect-v2-ethers-signer",
+  "version": "0.0.1",
+  "description": "A Ethers compatible signer for Wallet Connect version 2.",
   "engines": {
     "node": ">= 14.16 <15"
   },
+  "repository": "https://github.com/symfoni/walletconnect-v2-ethers-signer",
+  "files": ["lib/"],
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "devDependencies": {
     "@types/jest": "~26.0.22",
     "@types/node": "~14.14.41",
     "@typescript-eslint/eslint-plugin": "~4.22.0",
     "@typescript-eslint/parser": "~4.22.0",
+    "@walletconnect/client": "^2.0.0-alpha.37",
+    "@walletconnect/types": "^2.0.0-alpha.37",
     "eslint": "~7.24.0",
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.3.5",
+    "ethereum-test-network": "0.0.9",
     "jest": "~26.6.3",
     "prettier": "~2.2.1",
     "rimraf": "~3.0.2",
@@ -27,11 +34,13 @@
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepublish": "npm run build"
   },
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "ethers": "^5.1.3",
     "tslib": "~2.2.0"
   },
   "volta": {
