--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "node": ">= 14.16 <15"
   },
   "repository": "https://github.com/symfoni/walletconnect-v2-ethers-signer",
-  "files": ["lib/"],
+  "files": [
+    "lib/"
+  ],
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "devDependencies": {
@@ -40,6 +42,7 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
   },
