--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symfoni/walletconnect-v2-ethers-signer",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "A Ethers compatible signer for Wallet Connect version 2.",
   "engines": {
     "node": ">= 14.16 <15"
@@ -11,13 +11,18 @@
   ],
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
+  "dependencies": {
+    "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
+    "@walletconnect/client": "^2.0.0-alpha.37",
+    "@walletconnect/types": "^2.0.0-alpha.37",
+    "ethers": "^5.1.3",
+    "tslib": "~2.2.0"
+  },
   "devDependencies": {
     "@types/jest": "~26.0.22",
     "@types/node": "~14.14.41",
     "@typescript-eslint/eslint-plugin": "~4.22.0",
     "@typescript-eslint/parser": "~4.22.0",
-    "@walletconnect/client": "^2.0.0-alpha.37",
-    "@walletconnect/types": "^2.0.0-alpha.37",
     "eslint": "~7.24.0",
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.3.5",
@@ -37,15 +42,10 @@
     "lint": "eslint . --ext .ts,.tsx",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "prepublish": "npm run build"
+    "prepublish": "npm version patch --force && npm run build"
   },
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
-    "ethers": "^5.1.3",
-    "tslib": "~2.2.0"
-  },
   "volta": {
     "node": "14.16.1"
   }
