--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@symfoni/walletconnect-v2-ethers-signer",
-  "version": "0.0.18",
+  "version": "0.0.20",
   "description": "A Ethers compatible signer for Wallet Connect version 2.",
   "engines": {
-    "node": ">= 14.16 <15"
+    "node": ">= 14.16"
   },
   "repository": "https://github.com/symfoni/walletconnect-v2-ethers-signer",
   "files": [
@@ -12,8 +12,8 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "dependencies": {
-    "@walletconnect/client": "^2.0.0-alpha.42",
-    "@walletconnect/types": "^2.0.0-alpha.42",
+    "@walletconnect/client": "^2.0.0-beta.2",
+    "@walletconnect/types": "^2.0.0-beta.2",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
   },
