--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "dependencies": {
-    "@walletconnect/client": "^2.0.0-beta.4",
-    "@walletconnect/types": "^2.0.0-beta.4",
+    "@walletconnect/client": "^2.0.0-beta.17",
+    "@walletconnect/types": "^2.0.0-beta.17",
+    "caip": "^1.0.0",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
   },
@@ -22,7 +23,7 @@
     "eslint": "~7.24.0",
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.3.5",
-    "ethereum-test-network": "0.0.9",
+    "ethereum-test-network": "^0.0.9",
     "jest": "~26.6.3",
     "prettier": "~2.2.1",
     "rimraf": "~3.0.2",
