--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symfoni/walletconnect-v2-ethers-signer",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "A Ethers compatible signer for Wallet Connect version 2.",
   "repository": "https://github.com/symfoni/walletconnect-v2-ethers-signer",
   "files": [
@@ -21,9 +21,11 @@
     "publish:beta": "npm publish --tag beta"
   },
   "dependencies": {
-    "@walletconnect/client": "^2.0.0-beta.17.3",
-    "@walletconnect/types": "^2.0.0-beta.17.3",
+    "@types/debug": "^4.1.7",
+    "@walletconnect/client": "^2.0.0-beta.18",
+    "@walletconnect/types": "^2.0.0-beta.18",
     "caip": "^1.0.0",
+    "debug": "^4.3.2",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
   },
