--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@symfoni/walletconnect-v2-ethers-signer",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "A Ethers compatible signer for Wallet Connect version 2.",
+  "author": "Robertosnap <robertosnap@symfoni.solutions>",
   "repository": {
     "type": "git",
     "url": "https://github.com/symfoni/walletconnect-v2-ethers-signer"
@@ -27,7 +28,6 @@
     "@types/debug": "^4.1.7",
     "@walletconnect/client": "^2.0.0-beta.19",
     "@walletconnect/types": "^2.0.0-beta.19",
-    "caip": "^1.0.0",
     "debug": "^4.3.2",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
@@ -48,7 +48,6 @@
     "tsutils": "~3.21.0",
     "typescript": "~4.2.4"
   },
-  "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "volta": {
     "node": "14.16.1"
