--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symfoni/walletconnect-v2-ethers-signer",
-  "version": "0.2.9",
+  "version": "0.3.0-beta.23",
   "description": "A Ethers compatible signer for Wallet Connect version 2.",
   "author": "Robertosnap <robertosnap@symfoni.solutions>",
   "repository": {
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@types/debug": "^4.1.7",
-    "@walletconnect/client": "^2.0.0-beta.20.5",
-    "@walletconnect/types": "^2.0.0-beta.20.5",
+    "@walletconnect/client": "^2.0.0-beta.23",
+    "@walletconnect/types": "^2.0.0-beta.23",
     "debug": "^4.3.2",
     "ethers": "^5.1.3",
     "tslib": "~2.2.0"
@@ -48,8 +48,5 @@
     "tsutils": "~3.21.0",
     "typescript": "~4.2.4"
   },
-  "license": "Apache-2.0",
-  "volta": {
-    "node": "14.16.1"
-  }
+  "license": "Apache-2.0"
 }
